--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "chart.js": "^4.4.7",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.11",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
+    "react-toastify": "^11.0.3",
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
