--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "chart.js": "^4.4.7",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.11",
+    "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "pigeon-maps": "^0.22.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
