--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@react-google-maps/api": "^2.20.6",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "formik": "^2.4.6",
