--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mui/material": "^6.4.2",
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.7.9",
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.4.8",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.11",
     "jspdf": "^2.5.2",
@@ -38,9 +38,11 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
